fix: general settings
